// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches expected output: BookingDetail.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
fragment RouteStopFragment on RouteStop {
  cityName
  cityId
  time {
    utc
    local
  }
}

{
  bookingDetail(id:"Q3VzdG9tZXJCb29raW5nOjE2NDYzNDQ3") {
    id
    status
    arrival {
      ...RouteStopFragment
    }
    departure {
      ...RouteStopFragment
    }
    destinationImageUrl
    passengerCount
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
{
  "data": {
    "bookingDetail": {
      "id": "Qm9va2luZ09uZVdheToxNjQ2MzQ0Nw==",
      "status": "closed",
      "arrival": {
        "cityName": "Las Palmas",
        "cityId": "las-palmas_es",
        "time": {
          "utc": "2018-11-28T16:20:00.000Z",
          "local": "2018-11-28T16:20:00.000Z"
        }
      },
      "departure": {
        "cityName": "Vienna",
        "cityId": "vienna_at",
        "time": {
          "utc": "2018-11-28T11:20:00.000Z",
          "local": "2018-11-28T12:20:00.000Z"
        }
      },
      "destinationImageUrl": "https://images.kiwi.com/photos/600x600/las-palmas_es.jpg",
      "passengerCount": 1
    }
  }
}
`;

exports[`matches expected output: CustomerBookings.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
fragment RouteStopFragment on RouteStop {
  cityName
  cityId
  time {
    utc
    local
  }
}

fragment SectorFragment on Sector {
  duration
  departure {
    cityName
  }
  arrival {
    cityName
  }
}

{
  customerBookings {
    edges {
      node {
        id
        status
        arrival {
          ...RouteStopFragment
        }
        departure {
          ...RouteStopFragment
        }
        destinationImageUrl
        passengerCount

        ... on BookingOneWay {
          sector {
            ...SectorFragment
          }
        }
        ... on BookingReturn {
          inbound {
            ...SectorFragment
          }
          outbound {
            ...SectorFragment
          }
        }
        ... on BookingMulticity {
          sectors {
            ...SectorFragment
          }
        }
      }
    }
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
{
  "data": {
    "customerBookings": {
      "edges": [
        {
          "node": {
            "id": "Qm9va2luZ09uZVdheToxNjQ2MzQ0Nw==",
            "status": "closed",
            "arrival": {
              "cityName": "Las Palmas",
              "cityId": "las-palmas_es",
              "time": {
                "utc": "2018-11-28T16:20:00.000Z",
                "local": "2018-11-28T16:20:00.000Z"
              }
            },
            "departure": {
              "cityName": "Vienna",
              "cityId": "vienna_at",
              "time": {
                "utc": "2018-11-28T11:20:00.000Z",
                "local": "2018-11-28T12:20:00.000Z"
              }
            },
            "destinationImageUrl": "https://images.kiwi.com/photos/600x600/las-palmas_es.jpg",
            "passengerCount": 1,
            "sector": {
              "duration": 300,
              "departure": {
                "cityName": "Vienna"
              },
              "arrival": {
                "cityName": "Las Palmas"
              }
            }
          }
        },
        {
          "node": {
            "id": "Qm9va2luZ1JldHVybjo4MTQyODI4",
            "status": "confirmed",
            "arrival": {
              "cityName": "St. John s",
              "cityId": "st-johns_nl_ca",
              "time": {
                "utc": "2018-09-21T12:31:00.000Z",
                "local": "2018-09-21T10:01:00.000Z"
              }
            },
            "departure": {
              "cityName": "Madrid",
              "cityId": "madrid_es",
              "time": {
                "utc": "2018-09-20T19:30:00.000Z",
                "local": "2018-09-20T21:30:00.000Z"
              }
            },
            "destinationImageUrl": "https://images.kiwi.com/photos/600x600/st-johns_nl_ca.jpg",
            "passengerCount": 2,
            "inbound": {
              "duration": 915,
              "departure": {
                "cityName": "St. John s"
              },
              "arrival": {
                "cityName": "Madrid"
              }
            },
            "outbound": {
              "duration": 1021,
              "departure": {
                "cityName": "Madrid"
              },
              "arrival": {
                "cityName": "St. John s"
              }
            }
          }
        },
        {
          "node": {
            "id": "Qm9va2luZ011bHRpY2l0eTo2Njc2NTI0",
            "status": "confirmed",
            "arrival": {
              "cityName": "Bratislava",
              "cityId": "bratislava_sk",
              "time": {
                "utc": "2018-08-25T11:55:00.000Z",
                "local": "2018-08-25T13:55:00.000Z"
              }
            },
            "departure": {
              "cityName": "Bratislava",
              "cityId": "bratislava_sk",
              "time": {
                "utc": "2018-07-16T09:50:00.000Z",
                "local": "2018-07-16T11:50:00.000Z"
              }
            },
            "destinationImageUrl": "https://images.kiwi.com/photos/600x600/bratislava_sk.jpg",
            "passengerCount": 2,
            "sectors": [
              {
                "duration": 230,
                "departure": {
                  "cityName": "Bratislava"
                },
                "arrival": {
                  "cityName": "Santorini"
                }
              },
              {
                "duration": 240,
                "departure": {
                  "cityName": "Santorini"
                },
                "arrival": {
                  "cityName": "Tel Aviv"
                }
              },
              {
                "duration": 590,
                "departure": {
                  "cityName": "Tel Aviv"
                },
                "arrival": {
                  "cityName": "Bratislava"
                }
              }
            ]
          }
        }
      ]
    }
  }
}
`;

exports[`matches expected output: Itineraries.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
fragment RouteStopFragment on RouteStop {
  cityName
  cityId
  time {
    utc
    local
  }
}

query search {
  searchItineraries(input: {travelFrom: "OSL", travelTo: "LIM", dateFrom: "2019-03-01", dateTo: "2019-03-01", returnDateFrom: "2019-04-01", returnDateTo: "2019-04-01"}, first: 1) {
    edges {
      node {
        id
        sectors {
          duration
          stopoverDuration
          segments {
            departure {
              ...RouteStopFragment
            }
            arrival {
              ...RouteStopFragment
            }
          }
          departure {
            ...RouteStopFragment
          }
          arrival {
            ...RouteStopFragment
          }
        }
      }
    }
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
{
  "data": {
    "searchItineraries": {
      "edges": [
        {
          "node": {
            "id": "SXRpbmVyYXJ5OjM5OTEyMjc5NzgyMjAxMTlfMHwzOTE1MzYxNjAzMzExMTg1XzB8ODc3NjMwMTgzOTg2NDEyM18wfDEyMzQ1MzE2NjE2NTYxNjc4XzA=",
            "sectors": [
              {
                "duration": 3435,
                "stopoverDuration": null,
                "segments": [
                  {
                    "departure": {
                      "cityName": "Oslo",
                      "cityId": "OSL",
                      "time": {
                        "utc": "2019-03-01T17:45:00.000Z",
                        "local": "2019-03-01T18:45:00.000Z"
                      }
                    },
                    "arrival": {
                      "cityName": "Stockholm",
                      "cityId": "ARN",
                      "time": {
                        "utc": "2019-03-01T18:50:00.000Z",
                        "local": "2019-03-01T19:50:00.000Z"
                      }
                    }
                  },
                  {
                    "departure": {
                      "cityName": "Stockholm",
                      "cityId": "ARN",
                      "time": {
                        "utc": "2019-03-02T14:15:00.000Z",
                        "local": "2019-03-02T15:15:00.000Z"
                      }
                    },
                    "arrival": {
                      "cityName": "Fort Lauderdale",
                      "cityId": "FLL",
                      "time": {
                        "utc": "2019-03-03T00:45:00.000Z",
                        "local": "2019-03-02T19:45:00.000Z"
                      }
                    }
                  },
                  {
                    "departure": {
                      "cityName": "Fort Lauderdale",
                      "cityId": "FLL",
                      "time": {
                        "utc": "2019-03-03T03:55:00.000Z",
                        "local": "2019-03-02T22:55:00.000Z"
                      }
                    },
                    "arrival": {
                      "cityName": "Medellín",
                      "cityId": "MDE",
                      "time": {
                        "utc": "2019-03-03T07:24:00.000Z",
                        "local": "2019-03-03T02:24:00.000Z"
                      }
                    }
                  },
                  {
                    "departure": {
                      "cityName": "Medellín",
                      "cityId": "MDE",
                      "time": {
                        "utc": "2019-03-03T23:50:00.000Z",
                        "local": "2019-03-03T18:50:00.000Z"
                      }
                    },
                    "arrival": {
                      "cityName": "Lima",
                      "cityId": "LIM",
                      "time": {
                        "utc": "2019-03-04T03:00:00.000Z",
                        "local": "2019-03-03T22:00:00.000Z"
                      }
                    }
                  }
                ],
                "departure": {
                  "cityName": "Oslo",
                  "cityId": "OSL",
                  "time": {
                    "utc": "2019-03-01T17:45:00.000Z",
                    "local": "2019-03-01T18:45:00.000Z"
                  }
                },
                "arrival": {
                  "cityName": "Lima",
                  "cityId": "LIM",
                  "time": {
                    "utc": "2019-03-04T03:00:00.000Z",
                    "local": "2019-03-03T22:00:00.000Z"
                  }
                }
              }
            ]
          }
        }
      ]
    }
  }
}
`;
